results: update results content and styles on splash

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+
+@font-face {
+  font-family: 'Geopardy';
+  src: url('/src/assets/geoparody\ hv.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
