--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 
 @font-face {
   font-family: 'Geopardy';
-  src: url('/src/assets/geoparody\ hv.otf') format('opentype');
+  src: url('/geoparody\ hv.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
